--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Colorlib</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,13 +61,16 @@
                         <a class="nav-link" href="#">My Account</a>
                     </li>
                 </ul>
+                <div class="ms-auto">
+                    <img style="width: 50px;" src="./image-removebg-preview (17).png" alt="">
+                </div>
             </div>
         </div>
     </nav>
-    <div class="text-center">
+    <div class="text-center align-center">
         <div class="sec1">
             <div>
-                <img src="./colorlib-logo.webp" alt="">
+                <img class="d-sm-none d-md-inline-flex justify-center " src="./colorlib-logo.webp" alt="">
                 <p class="fs-1 text-light m-5">We change everything WordPress. <br>
                     One WP theme at a time.</p>
             </div>
